--- a/MODULE2/grid/styles.css
+++ b/MODULE2/grid/styles.css
@@ -1,6 +1,27 @@
+body{
+    margin:0;
+}
+.container {
+    display:grid;
+   /* grid-template-area */
+    /* border: 4px dotted green; */
+    gap:15px;
+ 
+}
+.one {
+   grid-column: 1 / 4;
+}
+
+.four {
+    grid-column: 3 / 4
+}
+.one-third {
+    grid-column:1/3
+}
 .child {
     border-radius: 5px;
     padding: 10px;
     background-color: lightblue;
-    border: 2px solid red;
+    border: 5px dotted red;
   }
+
